Adding some data validation

--- a/client/foodstorage.html
+++ b/client/foodstorage.html
@@ -36,7 +36,7 @@
     <input type="text" class="span2 front-field" placeholder="Select Food" name="FoodStorageSelect" id="FoodStorageSelect" /> 
     <input type="text" class="span2" placeholder="Expiration Date" id="ExpDatePicker">
     <input type="text" placeholder="Note (optional)" name="FoodStorageNote" id="FoodStorageNote" />
-    <i id="AddStorageButton" class="fa fa-plus" style="font-size: 2em;color: green;"></i>
+    <i id="AddStorageButton" class="fa fa-plus" style="font-size:2em; color:green; cursor:pointer"></i>
   </div>
 </template>
 
